--- a/styles/globals.css
+++ b/styles/globals.css
@@ -204,7 +204,7 @@ nav.active{
 
 .overlay{
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1));
 }
