--- a/styles/globals.css
+++ b/styles/globals.css
@@ -319,6 +319,18 @@ footer{
   font-size: 1.8rem;
 }
 
+.MailNumber{
+  text-decoration: none;
+  list-style: none;
+  color: white;
+}
+
+.blackMailNumber{
+  text-decoration: none;
+  list-style: none;
+  color: black;
+}
+
 .footerAddressTitle{
   font-size: 2.4rem;
 }
