--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1634,7 +1634,7 @@ to {
     margin-top: 0rem;
   }
   .footerAddress{
-    margin-top: 2rem;
+    padding-top: 2rem;
   }
   .footer{
     margin-top: 0%;
